--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.75"
 clap = { version = "4.4.10", features = ["derive"] }
 comfy-table = "7.1.0"
 dialoguer = "0.11.0"
+html-escape = "0.2.13"
 itertools = "0.12.0"
 reqwest = "0.11.22"
 serde = { version = "1.0.193", features = ["derive"] }
